# RecBole3.0

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/dataset/: agentcf.yaml  agentcfpp_cross.yaml  amazon2014_retrieval.yaml  amazon2023_retrieval.yaml  avazu_ctr.yaml  games_llmrank.yaml  ml1m_llmrank.yaml
configs/experiment/: stage5_1_rqvae_beauty_genrec.yaml  stage5_1_tiger_beauty_genrec.yaml
configs/model/: agentcf.yaml  agentcfpp.yaml  bigrec.yaml  care.yaml  e4srec.yaml  etegrec.yaml  hstu.yaml  lares.yaml  lcrec.yaml  letter.yaml  llm4rs.yaml  llmrank.yaml  llmrank_ml1m_openai.yaml  lsrm.yaml  minionerec.yaml  rankmixer.yaml  rearec.yaml  rpg.yaml  rqvae.yaml  starec.yaml  tiger.yaml
configs/trainer/: llmrank.yaml  retrieval.yaml
docs/: architecture-v1.md  architecture-v2.md  bigrec.md  component-authoring.md  llmrank.md  rearec.md  running.md
examples/starec/: README.md  export_cds_training_data.sh  prepare_cds_user_split.sh  run_cds_teacher_trace.sh  (+3 more)
tests/: __init__.py  test_agentcfpp.py  test_amazon2014.py  test_amazon2023.py  test_bigrec.py  test_config.py  test_dataset_cache.py  test_e4srec.py  test_etegrec.py  test_helpers.py  test_hstu.py  test_lares.py  test_llm4rs.py  test_llmrank.py  test_logger.py  test_metric.py  test_minionerec.py  test_model_dataset.py  test_openai.py  test_rearec.py  test_registration_validation.py  test_registry.py  test_rpg.py  test_run.py  test_sequential.py  test_split.py  test_starec.py  test_tiger.py  test_trainer_flow.py  test_utils.py
tools/: llm4rs_transformers_server.py
(+216 files in other folders)
