[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recbole3"
version = "0.1.0"
description = "A developer-friendly recommendation research toolkit skeleton."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "RecBole3.0 Contributors" }]
dependencies = [
  "accelerate>=1.0,<2.0",
  "hydra-core>=1.3,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "torch>=2.1",
  "scikit-learn>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
huggingface = [
  "datasets>=3,<4.0",
]
modelscope = [
  "modelscope[datasets]==1.34.0",
]
hstu = [
  "fbgemm-gpu",
]
rqvae = [
  "sentence-transformers",
]
letter = [
  "sentence-transformers",
  "k-means-constrained",
]
tiger = [
  "transformers>=4.40,<5.0",
]
minionerec = [
  "bitsandbytes",
  "sentence-transformers",
  "transformers>=4.40",
  "trl>=0.15",
]
lc-rec = [
  "peft<0.19.0",
  "flash-attn",
]

llmrank = [
  "nltk>=3.8",           # Manually download the required NLTK packages: python -c "import nltk; nltk.download('punkt'); nltk.download('stopwords')"
  "tqdm>=4.60.0",        
  "transformers>=4.37.0",
  "jinja2>=3.0.0",       
  "openai>=1.0.0",       
]
starec = [
  "openai>=1.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
